[package]
name = "LN_Server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
cln-rpc = "0.5.0"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["std"] }
